Fix: Set a high z-index for the floating drag element so it will be visible on the page

--- a/css/rowReorder.dataTables.scss
+++ b/css/rowReorder.dataTables.scss
@@ -8,6 +8,7 @@ table.dt-rowReorder-float {
 	table-layout: static;
 	outline: $move-outline;
 	outline-offset: -2px;
+	z-index: 2001;
 }
 
 tr.dt-rowReorder-moving {
